--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "RNFirebaseStarter",
+  "name": "schengentracker",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
@@ -22,8 +22,11 @@
   },
   "dependencies": {
     "fbjs": "^0.8.16",
+    "moment": "^2.22.1",
     "react": "^16.3.1",
     "react-native": "^0.55.3",
-    "react-native-firebase": "^4.1.0"
+    "react-native-calendars": "^1.19.3",
+    "react-native-firebase": "^4.1.0",
+    "react-navigation": "^2.0.1"
   }
 }
