--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "preset": "react-native"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "fbjs": "^0.8.16",
     "moment": "^2.22.1",
     "react": "^16.3.1",
     "react-native": "^0.55.3",
+    "react-native-animatable": "^1.2.4",
     "react-native-calendars": "^1.19.3",
     "react-native-firebase": "^4.1.0",
     "react-navigation": "^2.0.1"
