--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-animatable": "^1.2.4",
     "react-native-calendars": "^1.19.3",
     "react-native-firebase": "^4.1.0",
+    "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.0.1"
   }
 }
