--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^16.3.1",
     "react-native": "^0.55.3",
     "react-native-animatable": "^1.2.4",
+    "react-native-background-timer": "^2.0.1",
     "react-native-calendars": "^1.19.3",
     "react-native-firebase": "^4.1.0",
     "react-native-vector-icons": "^4.6.0",
